forgot the </ul>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
           </div>
 
           <div id="menu-btns">
-            <!-- reset and hint buttons -->
+            <button>reset</button>
+            <button>hint</button>
           </div>
         </div>
       </div>
