--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
-    <style>
-      .center {
-        text-align: center;
-      }
-      ul {
-          list-style: none;
-          padding: 0;
-      }
-      img {
-          display: inline;
-          width: 200px;
-          height: 100px;
-      }
-      #footer {
-          width: 100%;
-          border-top: solid 2px black;
-          background-color: white;
-          position: fixed;
-          bottom: 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
   </head>
   <body>
@@ -51,7 +31,7 @@
               <li>-</li>
               <li>-</li>
               <li>-</li>
-
+            </ul>
           </div>
 
           <div id="menu-btns">
