added some ids and added center class to some stuff

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
       <div id='app'>
 
-        <div id='headers'>
+        <div id='headers' class='center'>
           <!-- Title and subtitles! -->
           <h1>Guessing Game!</h1>
           <h2>Guess a number between 1 - 100</h2>
         </div>
 
-        <div id='main'>
+        <div id='main' class='center'>
           <div id='input-parent'>
             <label for="number">Guess a number</label>
             <input id="number" type="number" min=1 max=100 step=1 placeholder='#'>
@@ -26,11 +26,11 @@
 
           <div id='guesses'>
             <ul>
-              <li>-</li>
-              <li>-</li>
-              <li>-</li>
-              <li>-</li>
-              <li>-</li>
+              <li id="guess">-</li>
+              <li id="guess"></li>-</li>
+              <li id="guess">-</li>
+              <li id="guess">-</li>
+              <li id="guess">-</li>
             </ul>
           </div>
 
@@ -49,7 +49,7 @@
             <img src='fa-logo@2x.png'></img>
           </div>
 
-          <div class=''>
+          <div class='center'>
             <h4>Project by YOUR NAME HERE</h4>
           </div>
 
