fixed the footer

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 
 
 
-    <div id='footer'>
+    <div id='footer' class='center'>
         <div>
           <div class=''>
             <img src='fa-logo@2x.png'></img>
           </div>
 
-          <div class='center'>
+          <div class=''>
             <h4>Project by YOUR NAME HERE</h4>
           </div>
 
