reset box-sizing and added some more CSS stuff

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
 
           <div id="menu-btns">
-            <button>reset</button>
-            <button>hint</button>
+            <button class='menu-button'>reset</button>
+            <button class='menu-button'>hint</button>
           </div>
         </div>
       </div>
