removed extra </li>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div id='guesses'>
             <ul>
               <li id="guess">-</li>
-              <li id="guess"></li>-</li>
+              <li id="guess">-</li>
               <li id="guess">-</li>
               <li id="guess">-</li>
               <li id="guess">-</li>
