unlinked style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!--link rel="stylesheet" type="text/css" href="style.css"-->
+
+    <link rel='stylesheet' type='text/css' href='bootstrap.css'>
 
   </head>
-  <body>
+  <body class='container'>
 
       <div id='app'>
 
