made some more changes... ugh, i've gotten lazy with commits. i gotta be better about documenting

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div id='main' class='center'>
           <div class='form-group' id='input-parent'>
-            <label for="number">Guess a number</label>
+            <!--label for="number">Guess a number</label-->
             <input class='form-control' id="number" type="number" min=1 max=100 step=1 placeholder='#'>
             <input class='btn btn-default' type="button">
           </div>
@@ -36,7 +36,7 @@
             </ul>
           </div>
 
-          <div class='btn-group' id="menu-btns">
+          <div id="menu-btns">
             <button class='btn btn-default'>reset</button>
             <button class='btn btn-default'>hint</button>
           </div>
@@ -45,7 +45,7 @@
 
 
 
-    <div id='footer' class='container'>
+    <div id='footer' class='center'>
         <div class='row'>
           <div class='col-sm-4'>
             <img class='img-responsive' src='fa-logo@2x.png'></img>
