changed up button classes

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
           <div class='form-group' id='input-parent'>
             <!--label for="number">Guess a number</label-->
             <input class='form-control' id="number" type="number" min=1 max=100 step=1 placeholder='#'>
-            <input class='btn btn-default' type="button">
+            <button class='btn btn-primary'>Guess</button>
           </div>
 
           <div id='guesses'>
             <ul>
-              <li id="guess">-</li>
-              <li id="guess">-</li>
-              <li id="guess">-</li>
-              <li id="guess">-</li>
-              <li id="guess">-</li>
+              <li class="guess">-</li>
+              <li class="guess">-</li>
+              <li class="guess">-</li>
+              <li class="guess">-</li>
+              <li class="guess">-</li>
             </ul>
           </div>
 
           <div id="menu-btns">
-            <button class='btn btn-default'>reset</button>
-            <button class='btn btn-default'>hint</button>
+            <button class='btn btn-warning'>reset</button>
+            <button class='btn btn-info'>hint</button>
           </div>
         </div>
       </div>
