adjusted input-parent id style to match example

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div id='main' class='center'>
-          <div class='form-group' id='input-parent'>
+          <div id='input-parent'>
             <!--label for="number">Guess a number</label-->
             <input class='form-control' id="number" type="number" min=1 max=100 step=1 placeholder='#'>
             <button class='btn btn-primary'>Guess</button>
