added ids to input-parent stuff to match example

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
 
         <div id='main' class='center'>
-          <div id='input-parent'>
+          <div class='form-group' id='input-parent'>
             <!--label for="number">Guess a number</label-->
-            <input class='form-control' id="number" type="number" min=1 max=100 step=1 placeholder='#'>
-            <button class='btn btn-primary'>Guess</button>
+            <input class='form-control' id="player-input" type="number" min=1 max=100 step=1 placeholder='#'>
+            <button class='btn btn-primary' id="submit">Guess</button>
           </div>
 
           <div id='guesses'>
