made the circles positioned prettily

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
 
           <div id='guesses'>
-            <ul>
+            <ul class = 'center'>
               <li class="guess">-</li>
               <li class="guess">-</li>
               <li class="guess">-</li>
