it looks... alright. on my computer in Chrome, at least.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div id='main' class='center'>
           <div class='form-group' id='input-parent'>
             <!--label for="number">Guess a number</label-->
-            <input class='form-control' id="player-input" type="number" min=1 max=100 step=1 placeholder='#'>
+            <input class='form-control' id="player-input" type="number" min=1 max=100 step=1 placeholder='#' autofocus=autofocus>
             <button class='btn btn-primary' id="submit">Guess</button>
           </div>
 
-          <div id='guesses'>
+          <div id='guesses' class='center'>
             <ul class = 'center'>
               <li class="guess">-</li>
               <li class="guess">-</li>
